--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ Estart
 
   <meta name="theme-color" content="#fafafa">
 
-  
+
 </head>
 
 <body>
@@ -600,6 +600,15 @@ Estart
 <script src="js/jquery.js"></script>
 <script src="js/main.js"></script>
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<!-- Google tag (gtag.js) -->
+<script defer src="https://www.googletagmanager.com/gtag/js?id=G-59WTBB1F2B"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-59WTBB1F2B');
+</script>
 
 </body>
 </html>
